monitoring/prometheus-istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: monitoring
spec:
  hosts:
  - "*"
  gateways:
  - prometheus-gateway
  http:
  - match:
    - uri:
        prefix: /graph
    route:
    - destination:
        host: mon-kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
  - match:
    - uri:
        prefix: /alerts
    route:
    - destination:
        host: mon-kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
  - match:
    - uri:
        prefix: /static
    route:
    - destination:
        host: mon-kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
  - match:
    - uri:
        prefix: /-/ready
    route:
    - destination:
        host: mon-kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
  - match:
    - uri:
        prefix: /api/v1
    route:
    - destination:
        host: mon-kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
